# moss-lang

./: .gitmodules  .logo.svg-autosave.kra  Cargo.toml  LICENSE.txt  README.md  debug.ymal  install.py  moss-lang.code-workspace
cli/: Cargo.toml
interpreter/: Cargo.toml
interpreter/src/: interpreter.rs  lib.rs  type_sitter_lang.rs  utils.rs
interpreter/src/interpreter/: diagnose.rs  element.rs  expr.rs  file.rs  function.rs  module.rs  parse.rs  run.rs  scope.rs  thread.rs  value.rs
interpreter/src/interpreter/run/: buitin_function.rs  function.rs
interpreter/src/type_sitter_lang/moss/: moss_gen.rs
interpreter/src/utils/: async_lockfree_stack.rs  concurrent_string_interner.rs  contexted.rs  pool.rs  secondary_linked_list.rs  simr_vec.rs  spmr_vec.rs  type_key.rs  typed_key.rs  unsafe_cell.rs
language-server/: Cargo.toml
language-server/src/: language_server.rs  main.rs
language_example/diagnose/src/: _.moss
language_example/function/_/src/: _.moss
language_example/function/capture/src/: _.moss
language_example/function/higher_order/src/: _.moss
language_example/function/nested/src/: _.moss
language_example/function/src/: _.moss
language_example/graph/src/: _.moss
language_example/hallo_world/src/: _.moss  a.moss  b.moss
language_example/module/src/: a.moss  b.moss  c.moss
language_example/scope/src/: _.moss
language_example/test/src/: _.moss  a.moss  b.moss
src/type_sitter/: moss.rs
