[package]
name = "moss-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
dashmap = "6.1.0"
enum-extract-error = "0.1.1"
enum-extract-macro = "0.1.1"
env_logger = "0.11.8"
hashbrown = { workspace = true }
lockfree = "0.5.1"
log = { workspace = true }
parking_lot = "0.12.5"
sharded-slab = "0.1.7"
slotmap = "1.0.7"
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros","sync"] }
tree-sitter = {workspace = true}
tree-sitter-moss =  {workspace = true}
type-sitter =  {workspace = true}

[build-dependencies]
cc = "*"
